fixed media url creation. Added separate Bot controller for telegram bot with copied methods